5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1585_1017.log
== TEST (2019-03-26 11:04:34) 
-- CODE:


t1 = radians(float(input("Latitude de P1: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:04:57) 
-- CODE:

from math import *
t1 = radians(float(input("Latitude de P1: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:11:05) 
-- CODE:

from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("longitude de p2: ")))
distancia = 6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1 - g2))
print(round(distancia,2))
-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:11:17) 
-- CODE:

from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de p1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("longitude de p2: ")))
distancia = 6371.01*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1 - g2))
print(round(distancia,2))
-- EXECUTION TIME:
0.169841
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
